fixing responsive issue making button smaller in mobile device

--- a/css/index.css
+++ b/css/index.css
@@ -7,9 +7,10 @@ body{
 nav{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 80%;
     margin: auto;
-    padding-top: 20px;
+    height: 70px;
 }
 
 .nav-items{
